# esdmd

./: .gitignore  .nvim-fileslots  LICENSE  README.md  config.py  main.py  pyproject.toml
src/: data_utils.py  esdmd.py  kuramoto.py  lorenz96.py  oscillatory.py  plotter.py  sdmd.py
